# Roost

./: .gitignore  Cargo.toml  README.md  camera.service  config.example.toml  s3_uploader.py
src/: main.rs
viewer/: README.md  requirements.txt  server.py
viewer/static/: index.html
vision/: .gitignore  README.md  dashboard-read-policy.json  handler.py  lambda-execution-policy.json  requirements.txt  s3-notification.example.json  test_handler.py
