[package]
name = "camera"
version = "0.2.0"
edition = "2021"

[dependencies]
v4l = "0.14.0"
turbojpeg = "0.5.4"
ab_glyph = "0.2.23"
image = { version = "0.25.0", default-features = false }
chrono = "0.4.35"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.115"
toml = "0.5.8"
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = "0.20"
futures = "0.3.30"

[profile.release]
opt-level = 2
lto = false
